--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">GeoAlarm</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="set_area">Set area</string>
+    <string name="set_ringtone">Set Ringtone</string>
+    <string name="use_vibrate">Vibrate</string>
 
 </resources>
