--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,7 +11,14 @@
     <string name="geofence_transition_error_detail">Geofencing Error: %d</string>
     <string name="welcome">Welcome to Safe Zzz.\n\nUse the map to select the area where the alarm should be triggered and select an alarm sound.\n\nFlip the switch at the bottom when ready.</string>
     <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
     <string name="set_alarm">OFF</string>
     <string name="disable_alarm">ON</string>
+    <string name="action_load_location">Load location</string>
+    <string name="action_save_location">Save location</string>
+    <string name="location_name_hint">Location description</string>
+    <string name="location_saved_success">Location saved</string>
+    <string name="bad_location_description">Enter a description for the location</string>
+    
 
 </resources>
