--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,5 +21,8 @@
     <string name="bad_location_description">Enter a description for the location</string>
     <string name="load_location_title">Load location</string>
     <string name="save_location_title">Save location</string>
+    <string name="action_settings">Settings</string>
+    
+    <string name="pref_header_location_technique">Location technique</string>
 
 </resources>
